--- a/20230513.html
+++ b/20230513.html
@@ -49,7 +49,7 @@
       </p>
 
       <p>
-        The punchline is part of the slogan that President Xi unveiled in 2013 as a goal for the Chinese military. Beijing authorities said Shanghai Xiaoguo Culture Media Co and Li had "humiliated the people's army". They then confiscated 1.32m yuan of what was deemed to be illegal income, and fined the company another 13.35m yuan.
+        The punchline is part of the slogan that President Xi unveiled in 2013 as a goal for the Chinese military. Beijing authorities said Shanghai Xiaoguo Culture Media Co and Li had “humiliated the people's army”. They then confiscated 1.32m yuan of what was deemed to be illegal income, and fined the company another 13.35m yuan.
       </p>
     </div>
   </body>
